# dune-messenger

./: .gitignore  index.html  main.js  package-lock.json  package.json  styles.css  tailwind.config.js  vite.config.js
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ChatArea.jsx  Layout.jsx  NavigationRail.jsx  PluginsView.jsx  SettingsModal.jsx  Sidebar.jsx  UserProfile.jsx  WelcomeScreen.jsx
src/hooks/: useChat.js  usePlugins.js
