[package]
name = "dune-messenger"
version = "0.1.0"
description = "Dune Messenger - a modular, plugin-sandboxed desktop messenger"
authors = ["Dune Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[[bin]]
name = "dune-messenger"
path = "src/main.rs"
